artifact/cadp/2_threads_2_instructions/checker_files/5/test_5.log

svl clean info: [persistent] test_5_none.bcg

"test_5_none.bcg" = generation of "test_5_none.lnt"

svl clean info: [temporary] generator

svl clean info: [temporary] generator.o

svl clean info: [temporary] test_5_none.o

svl clean info: [temporary] test_5_none.err

% lnt.open   "test_5_none.lnt"  generator  "test_5_none.bcg"

lnt.open: translating ``common.lnt'' to ``/tmp/hevrard_lnt.open_kORcVv/COMMON.lib'' ...

      case access(prog, pc) of Instruction in
	   ^
[/tmp/hevrard_lnt.open_kORcVv/common:67] warning: ``access'' is replaced by ``{''

      case access(prog, pc) of Instruction in
		      ^
[/tmp/hevrard_lnt.open_kORcVv/common:67] warning: ``)'' is inserted before ``,''

      case access(prog, pc) of Instruction in
			  ^
[/tmp/hevrard_lnt.open_kORcVv/common:67] warning: ``('' is inserted before ``)''

      case access(prog, pc) of Instruction in
					   ^
[/tmp/hevrard_lnt.open_kORcVv/common:67] warning: ``}'' is inserted before ``in''
lnt2lotos: double quotes around function identifiers in ``with'' clauses are deprecated and should be removed (6 occurrences found)
/tmp/hevrard_lnt.open_kORcVv/common.lnt:34: error:  the predefined function ``access'' should be renamed to ``element''
/tmp/hevrard_lnt.open_kORcVv/common.lnt:401: warning: variable NUMCU is declared but not used
/tmp/hevrard_lnt.open_kORcVv/common.lnt:67: error: the type of the expression filtered by this ``case'' statement could
	not be determined. Use type coercion ``V of T'' to solve ambiguity
lnt2lotos: LNT program is semantically incorrect
lnt2lotos: quit
command exit with status 1

svl: ERROR command failed
